# retrowetter

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  dwd_provider.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
.streamlit/: config.prod.toml  config.toml
data/: stations.csv
locales/de_DE/LC_MESSAGES/: messages.po
locales/en_US/LC_MESSAGES/: messages.po
